@@ -54,7 +54,7 @@ public class ShortestPathFactory extends GraphAlgorithmFactory {
 	@Override
 	public Map<String, Object> getConstraints() {
 		Map<String, Object> map = new HashMap<String, Object>(2);
-		map.put("minPoints", new Integer(2));
+		map.put("minPoints", Integer.valueOf(2));
 		map.put("sourceIsTarget", Boolean.valueOf(false));
 		return map;
 	}
